--- a/src/assets/fontello/css/fontello-codes.css
+++ b/src/assets/fontello/css/fontello-codes.css
@@ -1,3 +1,5 @@
 
 .icon-location:before { content: '\e800'; } /* '' */
+.icon-right-open:before { content: '\e801'; } /* '' */
+.icon-left-open:before { content: '\e802'; } /* '' */
 .icon-calendar-empty:before { content: '\f133'; } /* '' */
