--- a/src/assets/fontello/css/fontello.css
+++ b/src/assets/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?69408112');
-  src: url('../font/fontello.eot?69408112#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?69408112') format('woff2'),
-       url('../font/fontello.woff?69408112') format('woff'),
-       url('../font/fontello.ttf?69408112') format('truetype'),
-       url('../font/fontello.svg?69408112#fontello') format('svg');
+  src: url('../font/fontello.eot?79032198');
+  src: url('../font/fontello.eot?79032198#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?79032198') format('woff2'),
+       url('../font/fontello.woff?79032198') format('woff'),
+       url('../font/fontello.ttf?79032198') format('truetype'),
+       url('../font/fontello.svg?79032198#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?69408112#fontello') format('svg');
+    src: url('../font/fontello.svg?79032198#fontello') format('svg');
   }
 }
 */
@@ -56,4 +56,6 @@
 }
  
 .icon-location:before { content: '\e800'; } /* '' */
+.icon-right-open:before { content: '\e801'; } /* '' */
+.icon-left-open:before { content: '\e802'; } /* '' */
 .icon-calendar-empty:before { content: '\f133'; } /* '' */
